added hyperlink support and thumbnail preview for image links

--- a/.gitignore
+++ b/.gitignore
@@ -1375,3 +1375,6 @@ venv/Lib/site-packages/urllib3-2.3.0.dist-info/RECORD
 venv/Lib/site-packages/urllib3-2.3.0.dist-info/WHEEL
 venv/Lib/site-packages/urllib3-2.3.0.dist-info/licenses/LICENSE.txt
 venv/Scripts/normalizer.exe
+UIprealpha.html
+UIprealpha.js
+
