--- a/.gitignore
+++ b/.gitignore
@@ -1379,3 +1379,62 @@ UIprealpha.html
 UIprealpha.js
 
 chatlog_font_settings.json
+font_settings.json
+data/settings.json
+data/messages/Alys@ccxbbs.net.json
+data/messages/Bill.The.Cat.json
+data/messages/billy@din.asciiattic.com.json
+data/messages/BlaZ.json
+data/messages/BlaZ@thepenaltybox.org
+data/messages/BlaZ@thepenaltybox.org.json
+data/messages/BoiBanned@thepenaltybox.org.json
+data/messages/Buck@thepenaltybox.org.json
+data/messages/Chatbot@thepenaltybox.org.json
+data/messages/Corp.Por.This.json
+data/messages/CrashOverRide.json
+data/messages/Dirty.Socks.json
+data/messages/Dirty.Socks@thepenaltybox.org.json
+data/messages/Duckula@bbs.themajorbbs.com.json
+data/messages/Engel.json
+data/messages/Engel@thepenaltybox.org.json
+data/messages/Gary@ccxbbs.net
+data/messages/Hornet.json
+data/messages/Hornet@thepenaltybox.org.json
+data/messages/Infinite97@thepenaltybox.org.json
+data/messages/Jack.Frost@thepenaltybox.org.json
+data/messages/Khan@adeptbbs.com.json
+data/messages/Khan@sos-bbs.net.json
+data/messages/Living.Fart@sos-bbs.net.json
+data/messages/Mark@thepenaltybox.org.json
+data/messages/Matlock.json
+data/messages/Matlock@thepenaltybox.org.json
+data/messages/NerdTower.json
+data/messages/NerdTower@ccxbbs.net
+data/messages/NerdTower@ccxbbs.net.json
+data/messages/Nerdtower@thepenaltybox.org.json
+data/messages/Night.json
+data/messages/Night@thepenaltybox.org.json
+data/messages/Noah
+data/messages/Noah.json
+data/messages/Nodin.json
+data/messages/Nodin@thepenaltybox.org.json
+data/messages/Ozmosis@bbs.themajorbbs.com.json
+data/messages/Ragtop.json
+data/messages/Ragtop@adeptbbs.com.json
+data/messages/Ramius.json
+data/messages/Ramius@holodeckbbs.ddns.net.json
+data/messages/Rick.V@thepenaltybox.org.json
+data/messages/RickV@bbs.themajorbbs.com.json
+data/messages/RobbyC@thepenaltybox.org.json
+data/messages/Spampeg.json
+data/messages/Spampeg@thepenaltybox.org.json
+data/messages/Sysop.json
+data/messages/Sysop@bbs.junglebbs.com.json
+data/messages/Ultron.json
+data/messages/Wags@dwbbs.ddns.net.json
+data/messages/Zyber1an@thepenaltybox.org.json
+src/storage/__pycache__/persistence.cpython-312.pyc
+src/ui/chatlog.py
+src/ui/__pycache__/chatlog.cpython-312.pyc
+src/ui/__pycache__/settings.cpython-312.pyc
+src/ui/__pycache__/terminal.cpython-312.pyc
