chatlog UI refinements

--- a/.gitignore
+++ b/.gitignore
@@ -1554,3 +1554,4 @@ venv/Lib/site-packages/pyenchant-3.2.2.dist-info/RECORD
 venv/Lib/site-packages/pyenchant-3.2.2.dist-info/REQUESTED
 venv/Lib/site-packages/pyenchant-3.2.2.dist-info/top_level.txt
 venv/Lib/site-packages/pyenchant-3.2.2.dist-info/WHEEL
+hyperlinks.json
