--- a/.gitignore
+++ b/.gitignore
@@ -1555,3 +1555,4 @@ venv/Lib/site-packages/pyenchant-3.2.2.dist-info/REQUESTED
 venv/Lib/site-packages/pyenchant-3.2.2.dist-info/top_level.txt
 venv/Lib/site-packages/pyenchant-3.2.2.dist-info/WHEEL
 hyperlinks.json
+__pycache__/decoders.cpython-312.pyc
