--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-telnetlib3>=0.7.0
-Pillow>=9.0.0
-requests>=2.0.0
-pyenchant>=3.2.2 
+requests
+Pillow
+telnetlib3
+winsound; platform_system=="Windows"
+pyspellchecker
+tkinter
+asyncio
