--- a/.gitignore
+++ b/.gitignore
@@ -4705,3 +4705,39 @@ build/main/localpycs/pyimod03_ctypes.pyc
 build/main/localpycs/pyimod04_pywin32.pyc
 build/main/localpycs/struct.pyc
 dist/main.exe
+TTsetup.bat
+__pycache__/image_patch.cpython-312.pyc
+build/tt_installer/Analysis-00.toc
+build/tt_installer/base_library.zip
+build/tt_installer/EXE-00.toc
+build/tt_installer/PKG-00.toc
+build/tt_installer/PYZ-00.pyz
+build/tt_installer/PYZ-00.toc
+build/tt_installer/TeleconferenceTerminal.pkg
+build/tt_installer/warn-tt_installer.txt
+build/tt_installer/xref-tt_installer.html
+build/tt_installer/localpycs/pyimod01_archive.pyc
+build/tt_installer/localpycs/pyimod02_importers.pyc
+build/tt_installer/localpycs/pyimod03_ctypes.pyc
+build/tt_installer/localpycs/pyimod04_pywin32.pyc
+build/tt_installer/localpycs/struct.pyc
+dist/TeleconferenceTerminal.exe
+Output/TeleconferenceTerminal_Setup.exe
+TT/mainreference.py
+TT/TTsetup.bat
+TT/__pycache__/ASCII_EXT.cpython-312.pyc
+TT/__pycache__/init_config.cpython-312.pyc
+TT/build/main/Analysis-00.toc
+TT/build/main/base_library.zip
+TT/build/main/EXE-00.toc
+TT/build/main/main.pkg
+TT/build/main/PKG-00.toc
+TT/build/main/PYZ-00.pyz
+TT/build/main/PYZ-00.toc
+TT/build/main/warn-main.txt
+TT/build/main/xref-main.html
+TT/build/main/localpycs/pyimod01_archive.pyc
+TT/build/main/localpycs/pyimod02_importers.pyc
+TT/build/main/localpycs/pyimod03_ctypes.pyc
+TT/build/main/localpycs/pyimod04_pywin32.pyc
+TT/build/main/localpycs/struct.pyc
