--- a/.gitignore
+++ b/.gitignore
@@ -5795,3 +5795,137 @@ dist/TeleconferenceTerminal/_internal/_tcl_data/tzdata/America/Ciudad_Juarez
 dist/TeleconferenceTerminal/_internal/charset_normalizer/md__mypyc.cp313-win_amd64.pyd
 dist/TeleconferenceTerminal/_internal/charset_normalizer/md.cp313-win_amd64.pyd
 dist/TeleconferenceTerminal/_internal/tcl8/8.5/tcltest-2.5.8.tm
+__pycache__/hook-PIL.cpython-312.pyc
+__pycache__/hook-vlc.cpython-312.pyc
+dist/TeleconferenceTerminal/chat.wav
+dist/TeleconferenceTerminal/directed.wav
+dist/TeleconferenceTerminal/_internal/_wmi.pyd
+dist/TeleconferenceTerminal/_internal/PIL/__init__.py
+dist/TeleconferenceTerminal/_internal/PIL/__main__.py
+dist/TeleconferenceTerminal/_internal/PIL/_binary.py
+dist/TeleconferenceTerminal/_internal/PIL/_deprecate.py
+dist/TeleconferenceTerminal/_internal/PIL/_imaging.pyi
+dist/TeleconferenceTerminal/_internal/PIL/_imagingcms.pyi
+dist/TeleconferenceTerminal/_internal/PIL/_imagingft.cp312-win_amd64.pyd
+dist/TeleconferenceTerminal/_internal/PIL/_imagingft.pyi
+dist/TeleconferenceTerminal/_internal/PIL/_imagingmath.pyi
+dist/TeleconferenceTerminal/_internal/PIL/_imagingmorph.cp312-win_amd64.pyd
+dist/TeleconferenceTerminal/_internal/PIL/_imagingmorph.pyi
+dist/TeleconferenceTerminal/_internal/PIL/_imagingtk.pyi
+dist/TeleconferenceTerminal/_internal/PIL/_tkinter_finder.py
+dist/TeleconferenceTerminal/_internal/PIL/_typing.py
+dist/TeleconferenceTerminal/_internal/PIL/_util.py
+dist/TeleconferenceTerminal/_internal/PIL/_version.py
+dist/TeleconferenceTerminal/_internal/PIL/_webp.pyi
+dist/TeleconferenceTerminal/_internal/PIL/BdfFontFile.py
+dist/TeleconferenceTerminal/_internal/PIL/BlpImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/BmpImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/BufrStubImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/ContainerIO.py
+dist/TeleconferenceTerminal/_internal/PIL/CurImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/DcxImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/DdsImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/EpsImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/ExifTags.py
+dist/TeleconferenceTerminal/_internal/PIL/features.py
+dist/TeleconferenceTerminal/_internal/PIL/FitsImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/FliImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/FontFile.py
+dist/TeleconferenceTerminal/_internal/PIL/FpxImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/FtexImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/GbrImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/GdImageFile.py
+dist/TeleconferenceTerminal/_internal/PIL/GifImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/GimpGradientFile.py
+dist/TeleconferenceTerminal/_internal/PIL/GimpPaletteFile.py
+dist/TeleconferenceTerminal/_internal/PIL/GribStubImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/Hdf5StubImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/IcnsImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/IcoImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/Image.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageChops.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageCms.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageColor.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageDraw.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageDraw2.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageEnhance.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageFile.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageFilter.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageFont.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageGrab.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageMath.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageMode.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageMorph.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageOps.py
+dist/TeleconferenceTerminal/_internal/PIL/ImagePalette.py
+dist/TeleconferenceTerminal/_internal/PIL/ImagePath.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageQt.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageSequence.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageShow.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageStat.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageTk.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageTransform.py
+dist/TeleconferenceTerminal/_internal/PIL/ImageWin.py
+dist/TeleconferenceTerminal/_internal/PIL/ImImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/ImtImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/IptcImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/Jpeg2KImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/JpegImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/JpegPresets.py
+dist/TeleconferenceTerminal/_internal/PIL/McIdasImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/MicImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/MpegImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/MpoImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/MspImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PaletteFile.py
+dist/TeleconferenceTerminal/_internal/PIL/PalmImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PcdImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PcfFontFile.py
+dist/TeleconferenceTerminal/_internal/PIL/PcxImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PdfImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PdfParser.py
+dist/TeleconferenceTerminal/_internal/PIL/PixarImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PngImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PpmImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PsdImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/PSDraw.py
+dist/TeleconferenceTerminal/_internal/PIL/py.typed
+dist/TeleconferenceTerminal/_internal/PIL/QoiImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/report.py
+dist/TeleconferenceTerminal/_internal/PIL/SgiImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/SpiderImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/SunImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/TarIO.py
+dist/TeleconferenceTerminal/_internal/PIL/TgaImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/TiffImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/TiffTags.py
+dist/TeleconferenceTerminal/_internal/PIL/WalImageFile.py
+dist/TeleconferenceTerminal/_internal/PIL/WebPImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/WmfImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/XbmImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/XpmImagePlugin.py
+dist/TeleconferenceTerminal/_internal/PIL/XVThumbImagePlugin.py
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/INSTALLER
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/LICENSE
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/METADATA
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/RECORD
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/REQUESTED
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/top_level.txt
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/WHEEL
+dist/TeleconferenceTerminal/_internal/pillow-11.1.0.dist-info/zip-safe
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/INSTALLER
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/LICENSE
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/METADATA
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/RECORD
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/REQUESTED
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/top_level.txt
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/importlib_metadata-8.0.0.dist-info/WHEEL
+dist/TeleconferenceTerminal/_internal/setuptools/_vendor/jaraco/text/Lorem ipsum.txt
+dist/TeleconferenceTerminal/_internal/wheel-0.44.0.dist-info/entry_points.txt
+dist/TeleconferenceTerminal/_internal/wheel-0.44.0.dist-info/INSTALLER
+dist/TeleconferenceTerminal/_internal/wheel-0.44.0.dist-info/LICENSE.txt
+dist/TeleconferenceTerminal/_internal/wheel-0.44.0.dist-info/METADATA
+dist/TeleconferenceTerminal/_internal/wheel-0.44.0.dist-info/RECORD
+dist/TeleconferenceTerminal/_internal/wheel-0.44.0.dist-info/REQUESTED
+dist/TeleconferenceTerminal/_internal/wheel-0.44.0.dist-info/WHEEL
+TT/main.py
