added image/gif preview frame to the main ui

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ requests
 Pillow
 telnetlib3
 pyspellchecker
+python-vlc  # For VLC integration
+pyinstaller  # For packaging the application
+pyenchant  # For spell checking functionality
